--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
@@ -118,7 +122,7 @@
             <li class="product-items">
               <img
                 class="img-clean"
-                src="./images/main-page/img-1.jpg"
+                src="./images/main_page/img-1.jpg"
                 alt="screen"
                 width="360"
               />
@@ -126,7 +130,7 @@
             <li class="product-items">
               <img
                 class="img-clean"
-                src="./images/main-page/img-2.jpg"
+                src="./images/main_page/img-2.jpg"
                 alt="application"
                 width="360"
               />
@@ -134,7 +138,7 @@
             <li class="product-items">
               <img
                 class="img-clean"
-                src="./images/main-page/img-3.jpg"
+                src="./images/main_page/img-3.jpg"
                 alt="phone"
                 width="360"
               />
@@ -151,7 +155,7 @@
             <li class="item-employe">
               <img
                 class="img-clean"
-                src="./images/main-page/our team/Mark Guerrero.jpg"
+                src="./images/main_page/our_team/mark-guerrero.jpg"
                 alt="employe"
                 width="264"
                 height="260"
@@ -164,7 +168,7 @@
             <li class="item-employe">
               <img
                 class="img-clean"
-                src="./images/main-page/our team/Tom Ford.jpg"
+                src="./images/main_page/our_team/tom-ford.jpg"
                 alt="employee"
                 width="264"
                 height="260"
@@ -177,7 +181,7 @@
             <li class="item-employe">
               <img
                 class="img-clean"
-                src="./images/main-page/our team/Camila Garcia.jpg"
+                src="./images/main_page/our_team/camila-garcia.jpg"
                 alt="employee"
                 width="264"
                 height="260"
@@ -190,7 +194,7 @@
             <li class="item-employe">
               <img
                 class="img-clean"
-                src="./images/main-page/our team/Daniel Wilson.jpg"
+                src="./images/main_page/our_team/daniel-wilson.jpg"
                 alt="employe"
                 width="264"
                 height="260"
