--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
       </section>
 
-      <!-- what are we doing  -->
+      <!-- section three  -->
 
       <section class="section">
         <div class="container content-wrap">
@@ -149,6 +149,8 @@
       </section>
 
       <!-- Our Team -->
+
+      <!-- section four -->
       <section class="section-employe">
         <div class="container content-wrap">
           <h2 class="headline-employe">Our Team</h2>
@@ -161,7 +163,7 @@
                 width="264"
                 height="260"
               />
-              <div class="wrap-title">
+              <div class="wrap-title-list">
                 <h3 class="title">Mark Guerrero</h3>
                 <p class="subtitle">Product Designer</p>
               </div>
@@ -174,7 +176,7 @@
                 width="264"
                 height="260"
               />
-              <div class="wrap-title">
+              <div class="wrap-title-list">
                 <h3 class="title">Tom Ford</h3>
                 <p class="subtitle">Frontend Developer</p>
               </div>
@@ -187,7 +189,7 @@
                 width="264"
                 height="260"
               />
-              <div class="wrap-title">
+              <div class="wrap-title-list">
                 <h3 class="title">Camila Garcia</h3>
                 <p class="subtitle">Marketing</p>
               </div>
@@ -200,7 +202,7 @@
                 width="264"
                 height="260"
               />
-              <div class="wrap-title">
+              <div class="wrap-title-list">
                 <h3 class="title">Daniel Wilson</h3>
                 <p class="subtitle">UI Designer</p>
               </div>
